       * Recommended e2fsprogs version: 1.39.cfs8
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * Starting with this release, the ldiskfs backing filesystem required
        by Lustre is now in its own package, lustre-ldiskfs.  This package
        should be installed.  It is versioned separately from Lustre and
        may be released separately in future.

Severity   : enhancement
Bugzilla   : 12194
Description: add optional extra BUILD_VERSION info
Details    : add a new environment variable (namely LUSTRE_VERS) which allows
	     to override the lustre version.

Severity   : normal
Frequency  : 2.6.18 servers only
Bugzilla   : 12546
Description: ll_kern_mount() doesn't release the module reference
Details    : The ldiskfs module reference count never drops down to 0
	     because ll_kern_mount() doesn't release the module reference.

Severity   : normal
Frequency  : rare
Bugzilla   : 12470
Description: server LBUG when using old ost_num_threads parameter
Details    : Accept the old ost_num_threads parameter but warn that it
	     is deprecated, and fix an off-by-one error that caused an LBUG.

Severity   : normal
Frequency  : rare
Bugzilla   : 11722
Description: Transient SCSI error results in persistent IO issue
Details    : iobuf->dr_error is not reinitialized to 0 between two
	     uses.

Severity   : normal
Frequency  : sometimes when underlying device returns I/O errors
Bugzilla   : 11743
Description: OSTs not going read-only during write failures
Details    : OSTs are not remounted read-only when the journal commit threads
	     get I/O errors because fsfilt_ext3 calls journal_start/stop()
	     instead of the ext3 wrappers.

Severity   : minor
Bugzilla   : 12364
Description: poor connect scaling with increasing client count
Details    : Don't run filter_grant_sanity_check for more than 100 exports
	     to improve scaling for large numbers of clients.

Severity   : normal
Frequency  : SLES10 only
Bugzilla   : 12538